--- a/src/components/LoginRegisterForm/LoginRegisterForm.module.scss
+++ b/src/components/LoginRegisterForm/LoginRegisterForm.module.scss
@@ -6,13 +6,16 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 40px;
+	gap: 32px;
 
 	h3 {
 		font-size: 38px;
 		font-weight: 600;
+		text-align: center;
 		text-transform: uppercase;
 		color: white;
+
+		width: 100%;
 
 		margin-bottom: 10px;
 	}
